Avoid overflow:hidden in segment editor, as it breaks dropdowns

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -362,10 +362,6 @@ html.comparisonsDisabled .segmentationContainer ul.submenu {
     overflow-y: auto;
 }
 
-.segmentListContainer {
-    overflow: hidden; /* Create a BFC */
-}
-
 .jspVerticalBar {
     background: transparent !important;
 }
